--- a/AngularJsUI/css/layout.css
+++ b/AngularJsUI/css/layout.css
@@ -1,36 +1,113 @@
-﻿.header {
-    height: 50px;
-    width: auto;
-    background-color: #8b8b8b;
+﻿.divLeftSideBar {
+    border-radius: 3px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    min-height: 300px;
+    background-color: #659dbd;
     text-align: center;
+    font-size: large;
 }
 
-.footer {
-    height: 50px;
-    width: auto;
-    background-color: #8b8b8b;
-    text-align: center;
+.divMainContent {
+    border-radius: 3px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    min-height: 610px;
+    background-color: #659dbd;
 }
 
-.leftpanel {
-    height: 500px;
-    width: 25%;
-    background-color: #8b8b8b;
-    text-align: center;
+.divNavMenu {
+    border-radius: 3px;
+    min-height:40px;
+    margin-top: 5px;    
+    background-color: #659dbd;
 }
 
-.maincontent {   
-    width: 75%;
-    background-color: #8b8b8b;
-    padding-left: 10%;
-    
+.modelBackground{
+    background-color :white;
 }
 
-.layouttable {
-    width: 100%;
+.textAlignCenter {
+   text-align:center;
+}
+.btnCustomColor {
+    background-color: #659dbd;
+    color:white;   
 }
 
-.layouttable td {
-    border-spacing: 10px;
+/*padding*/ 
+
+.padding-left-5px {
+    padding-left: 5px;
 }
 
+.padding-left-10px {
+    padding-left: 10px;
+}
+.padding-left-15px {
+    padding-left: 15px;
+}
+.padding-left-20px{
+    padding-left:20px;
+}
+
+
+.padding-right-5px {
+    padding-left: 5px;
+}
+
+.padding-right-10px {
+    padding-left: 10px;
+}
+
+.padding-right-15px {
+    padding-left: 15px;
+}
+
+.padding-right-20px {
+    padding-left: 20px;
+}
+
+.padding-right-30px {
+    padding-left: 20px;
+}
+
+.padding-right-40px {
+    padding-left: 20px;
+}
+
+.padding-right-50px {
+    padding-left: 20px;
+}
+
+.padding-top-5px {
+    padding-left: 5px;
+}
+
+.padding-top-10px {
+    padding-left: 10px;
+}
+
+.padding-top-15px {
+    padding-left: 15px;
+}
+
+.padding-top-20px {
+    padding-left: 20px;
+}
+
+.padding-bottom-5px {
+    padding-bottom: 5px;
+}
+
+.padding-bottom-10px {
+    padding-bottom: 10px;
+}
+
+.padding-bottom-15px {
+    padding-bottom: 15px;
+}
+
+.padding-bottom-20px {
+    padding-bottom: 20px;
+}
