--- a/AngularJsUI/css/layout.css
+++ b/AngularJsUI/css/layout.css
@@ -2,7 +2,7 @@
     border-radius: 3px;
     margin-top: 5px;
     margin-bottom: 5px;
-    min-height: 300px;
+    min-height: 610px;
     background-color: #659dbd;
     text-align: center;
     font-size: large;
@@ -33,6 +33,11 @@
 .btnCustomColor {
     background-color: #659dbd;
     color:white;   
+}
+
+.navMenuItemColor{
+    background-color:white;
+    color:black;
 }
 
 /*padding*/ 
