--- a/Angular5UI/hello-world/src/app/employee/employee-create.component.html
+++ b/Angular5UI/hello-world/src/app/employee/employee-create.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="employeeForm" class="form-horizontal" (ngSubmit)="onSubmit()">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">Cretae Employee</h3>
+            <h3 class="panel-title">Create Employee</h3>
         </div>
         <div class="panel-body">
             <div class="form-group" [ngClass]="{'has-error' : employeeForm.get('fullName').errors && 
@@ -69,12 +69,12 @@
             </div>
         </div>
         <div class="panel-footer">
-            <div class="btn-toolbar">
-                <button class="btn btn-primary" type="submit">Save</button>
-                <button class="btn btn-primary" type="button" (click)="onLoadDataClick()">Load Data</button>
-                <button class="btn btn-primary" type="button" (click)="onLoadPartialDataClick()">Load Partial</button>
-                <button class="btn btn-primary" type="button" (click)="onLogAllControls()">Log All Controls</button>
-                <button class="btn btn-primary" type="button" (click)="onDisableAllControls()">Disable All Controls</button>
+            <div class="btn btn-block">
+                <button class="btn btn-primary mr-2" type="submit">Save</button>
+                <button class="btn btn-primary mr-2" type="button" (click)="onLoadDataClick()">Load Data</button>
+                <button class="btn btn-primary mr-2" type="button" (click)="onLoadPartialDataClick()">Load Partial</button>
+                <button class="btn btn-primary mr-2" type="button" (click)="onLogAllControls()">Log All Controls</button>
+                <button class="btn btn-primary mr-2" type="button" (click)="onDisableAllControls()">Disable All Controls</button>
             </div>
         </div>
     </div>
